Better spacing between bottom and top, fixes scrollbar, fixes keeper log pushing bottom bar

--- a/src/renderer/src/components/layout/Layout.css
+++ b/src/renderer/src/components/layout/Layout.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100vh;
+  height: 99vh;
   box-sizing: border-box;
 }
 
@@ -16,7 +16,7 @@
 .bottom {
   display: flex;
   flex-direction: row;
-  flex: 1;
+  flex: 2;
   width: 100vw;
   overflow-x: scroll;
   overflow-y: hidden;
